# skills-match-agent

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/config/: config.py  paths.py
src/core/: agent_factory.py  agent_setup.py  extractor.py  tools.py
src/core/prompts/: agent_prompts.yaml
src/routes/: analyze.py
tests/: conftest.py  test_extractor.py
