[project]
name = "skills-match-agent"
version = "0.1.0"
description = "An API for matching resume text to job descriptions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.128.0",
  "loguru>=0.7.3",
  "pydantic-ai>=1.51.0",
  "pydantic-ai-slim[anthropic]>=1.51.0",
  "pydantic-settings>=2.12.0",
  "pytest>=9.0.2",
  "pyyaml>=6.0.3",
  "responses>=0.25.8",
  "spacy>=3.8.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
